--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "nodemailer": "^6.4.11",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
